Fix the following bugs
Watch your indentation. -
https://github.com/thinkful-cohort-16/Robert-Wade-Node-Capstone/blob/master/config.js#L4

An ampersand in HTML needs to be escaped as &amp; for reliability.

https://github.com/thinkful-cohort-16/Robert-Wade-Node-Capstone/blob/master/public/main.css#L6
- s/be "sans serif"

"Prepare Spell" is a toggle, but it doesn't make this clear.

--- a/public/main.css
+++ b/public/main.css
@@ -3,7 +3,7 @@ form, section {
 }
 
 body{
-  font-family: 'Aclonica', 'Arial', san-serif;
+  font-family: 'Aclonica', 'Arial', sans-serif;
   font-size: 16px;
   background-image: url('./images/fireballs2.png'), url('./images/texture5.png');
   background-repeat: repeat;
@@ -157,6 +157,10 @@ label {
   width: 85%;
   max-height: 535px;
   overflow: auto;
+}
+
+.spell-prepared{
+  background-color: yellow;
 }
 
 #wizards{
